app/assets/stylesheets/main.less
@import "partials/_base";
@import "partials/_popup";
@import "partials/_form";

#logo {
    text-align: center;

    h1 {
        display: inline-block;
        margin-bottom: 20px;

        color: @dark_text;

        font-family: "Proxima Nova Thin";
        font-size: 60px;
        font-weight: 100;
        letter-spacing: 7px;
        text-transform: uppercase;
        .no_select;

        a {
            text-decoration: none;
            &:visited {
                color: @dark_text;
            }
        }
    }

    .version {
        position: relative;
        bottom: 35px;

        padding: 3px 6px;
        background: @nav_bg;
        border-radius: 10px;

        font-size: 16px;
        letter-spacing: 1px;
        font-family: "Proxima Nova Light";
        color: white;
        .no_select;
    }
}

nav {
    position: fixed;
    z-index: 999;
    top: 0;
    left: 0;

    width: 100%;
    height: 50px;

    background: @nav_bg;
    font-family: "Proxima Nova Light";
    letter-spacing: 1px;
    color: @light_text;

    li {
        position: relative;
        top: 1px;
        cursor: pointer;

        a {
            text-decoration: none;
            display: inline-block;
            padding: 15px 10px;

            &:link, &:visited {
                color: @light_text;
            }

            &:hover {
                text-decoration: none;
                color: darken(@light_text, 15);
            }
        }
    }

    .sub_navbar {
        display: none;
        position: absolute;
        left: -10px;
        background: @nav_bg;

        li {
            display: block;
            margin: 0;
            border-top: 1px solid @light_text;
            text-align: center;

            a {
                padding: 12px 15px;
            }

        }
    }
}

.info_nav {
    margin-left: 30px;
    float: left;
}

.user_nav {
    float: right;
}

#homepage_search {
    input {
        display: block;
        width: 650px;
        height: 36px;
        border: 1px solid @border;
        border-radius: 105px;
        margin: 0 auto;
        padding: 3px 20px;

        font-size: 22px;

        outline: 0;
    }
}

#mission {
    margin: 40px auto 0 auto;
    font-family: "Proxima Nova Light";

    h2 {
        width: 400px;
        margin: 25px auto 15px auto;
        padding: 8px 0;
        text-align: center;
        font-family: "Proxima Nova Thin";
    }

    .emphasis {
        font-weight: bold;
        letter-spacing: 1px;
    }

    .header {
        text-align: center;
    }

    p {
        margin-bottom: 15px;
    }

    input {
        float: right;
    }
}

.fav {
    background: @fav;
}

.warning {
    background: @warning;
}

.contained_products {
    ul {
        text-align: justify;
        -ms-text-justify: distribute-all-lines;
        text-justify: distribute-all-lines;

        li {
            vertical-align: top;
            display: inline-block;
            *display: inline;
            zoom: 1
        }

        &::after {
            content:' ';
            display:inline-block;
            width: 100%;
            height: 0 }
    }
}

.ingredient_detail, .product_detail {
    .picture, .info {
        float: left;
    }

    .info {
        width: 600px;
        margin-left: 50px;
    }

    .name {
        font-size: 32px;
        margin-bottom: 25px;
    }

    .price {
        font-size: 22px;
        font-weight: bold;
    }

    .size {
        font-size: 20px;
    }

    .price, .size {
        margin-bottom: 10px;
    }
}


.function {
    border-radius: 5px;
    padding: 1px 7px;
    margin-right: 10px;
    cursor: pointer;

    &:hover {
        background: rgba(0, 0, 0, 0.18);
        text-decoration: none;
    }
}

.ingredient_item, .ingredient_infobox {
    margin-bottom: 15px;

    .function {
        display: inline-block;
        border-radius: 5px;
        margin-bottom: 10px;
    }
}

.neutral {
    background: @neutral;
}

.ingredient_infobox, .function_infobox {
    position: absolute;
    .hidden;
    width: 400px;
    padding: 0 30px 20px 30px;
    background: @bg;
    border: 1px solid @border;
}

.ingredient {
    cursor: pointer;

    &:hover {
        text-decoration: underline;
    }
}

#search_icon {
    position: relative;
    top: 7px;
    padding: 3px;
    .square(20px);
    fill: @light_text;

    &:hover {
        fill: darken(@light_text, 15);
    }
}
.notice_container {
    position: fixed;
    top: 80px;
    right: 30px;

    .info, .error {
        position: relative;
        display: none;
        width: 400px;
        min-height: 50px;
        margin-bottom: 20px;
        padding: 20px 20px 5px 20px;
        border: 1px solid @bg;
        color: @light_text;

        .close_btn {
            color: @light_text;
        }
    }

    .info {
        background: @nav_bg;
    }

    .error {
        background: @error;
    }
}

.column {
    min-width: 500px;
    margin-right: 30px;
    float: left;
}

.down_arrow {
    position: relative;
    bottom: 2px;
    margin-left: 6px;
    font-size: 14px;

    &::before {
        content: "\25BC";
    }
}

.unrecognized {
    color: @border;
    cursor: default;

    &:hover {
        text-decoration: none;
    }
}

#search_category_arrow {
    display: none;
    position: relative;
    top: 1px;
    right: 30px;
}

#search_category_select, #nav_searchbar {
    display: none;
    position: relative;
    top: 1px;
    height: 28px;
    border: none;
}
#search_category_select {
    padding: 0 2px 0 10px;
    border-radius: 100px 0 0 100px;
}

#nav_searchbar {
    right: 6px;
    padding: 0 8px;
    width: 400px;
    border-left: 1px solid @border;
    font-size: 17px;
    background: @bg;
}

#nav_searchbar_btn {
    display: none;
    background: @bg;
    color: @dark_text;
    height: 28px;
    left: -13px;
    top: 0px;
    border-radius: 0 14px 14px 0;
    border-left: 1px solid @border;
}

.ui-autocomplete.ui-widget {
    position: absolute;
    background: @bg;
    z-index: 99999;

    li {
        display: block;
        padding: 4px 7px;
        margin: 0;
        border: 1px solid @nav_bg;
        border-top: none;
        color: @dark_text;
        font-family: "Source Sans Pro";
        letter-spacing: 0;
        line-height: 100%;
        cursor: pointer;

        &.ui-state-focus {
            background: @nav_bg;
            color: @light_text;
        }
    }
}

.ui-helper-hidden-accessible {
    display: none;
}

.autocomplete_found_part {
    font-weight: bold;
}

.product_detail {
    margin-top: 30px;
}

.picture {
    box-sizing: border-box;
    width: 400px;
    height: 350px;
    margin-bottom: 100px;
    text-align: center;

    img {
        max-width: 350px;
        max-height: 350px;
    }
}

.ingredient_container {
    float: left;
    margin-bottom: 100px;

    .name {
        margin: 0;
    }
    .brand {
        margin: 10px 0 30px 0;
        font-size: 22px;
    }
}

.product {
    position: relative;
    width: 340px;
    height: 325px;
    margin-bottom: 40px;
    text-align: center;
    box-sizing: border-box;

    .product_brand {
        font-weight: bold;
    }

    .product_pic {
        width: 250px;
        height: 250px;
        padding: 20px;
        box-sizing: border-box;

        img {
            max-width: 250px;
            max-height: 250px;
        }
    }
}

